--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,83 @@
     font-style: normal;
   }
 }
+
+@layer components {
+}
+
+/* Calendar */
+
+.fc {
+  @apply h-full;
+
+  .fc-toolbar.fc-header-toolbar {
+    @apply mb-5;
+  }
+
+  tbody[role="presentation"] {
+    @apply text-black font-semibold;
+  }
+
+  .fc-toolbar-title {
+    @apply text-white font-bold text-4xl w-20;
+  }
+
+  .fc-daygrid-day-top {
+    @apply flex justify-end;
+  }
+
+  .fc-daygrid-day{
+    @apply bg-white/80;
+
+    &.fc-day-other{
+      @apply bg-[#9FABE1]/80 text-white;
+    }
+  }
+
+  .fc-day-today {
+    &.fc-daygrid-day{
+      @apply bg-white/80;
+
+    }
+    .fc-daygrid-day-top {
+      @apply mx-1 mt-[0.05rem] w-8;
+
+      .fc-daygrid-day-number {
+        @apply text-white rounded-full bg-primary w-8 text-center;
+      }
+    }
+
+    &.fc-day-other {
+      @apply bg-secondary;
+    }
+  }
+
+  .fc-col-header-cell {
+    @apply text-white text-lg uppercase;
+  }
+
+  &.fc-theme-standard .fc-scrollgrid {
+    @apply border-black;
+  }
+
+  &.fc-theme-standard th {
+    @apply border-black;
+  }
+
+  &.fc-theme-standard td,
+  .fc-theme-standard th {
+    @apply border-black;
+  }
+
+  .fc-button {
+    @apply bg-primary border-none hover:bg-primary/50;
+  }
+
+  .fc-button-primary:not(:disabled).fc-button-active {
+    @apply bg-primary;
+  }
+
+  .fc-button-primary:disabled {
+    @apply bg-primary/80;
+  }
+}
