--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
   @apply h-full;
 
   .fc-toolbar.fc-header-toolbar {
-    @apply mb-5;
+    @apply mb-6;
   }
 
   tbody[role="presentation"] {
@@ -33,18 +33,17 @@
     @apply flex justify-end;
   }
 
-  .fc-daygrid-day{
+  .fc-daygrid-day {
     @apply bg-white/80;
 
-    &.fc-day-other{
+    &.fc-day-other {
       @apply bg-[#9FABE1]/80 text-white;
     }
   }
 
   .fc-day-today {
-    &.fc-daygrid-day{
+    &.fc-daygrid-day {
       @apply bg-white/80;
-
     }
     .fc-daygrid-day-top {
       @apply mx-1 mt-[0.05rem] w-8;
@@ -59,16 +58,20 @@
     }
   }
 
+  .fc-col-header {
+    @apply mb-2;
+  }
+
   .fc-col-header-cell {
-    @apply text-white text-lg uppercase;
+    @apply text-white text-xl uppercase;
   }
 
   &.fc-theme-standard .fc-scrollgrid {
-    @apply border-black;
+    @apply border-transparent;
   }
 
   &.fc-theme-standard th {
-    @apply border-black;
+    @apply border-transparent;
   }
 
   &.fc-theme-standard td,
@@ -78,6 +81,18 @@
 
   .fc-button {
     @apply bg-primary border-none hover:bg-primary/50;
+
+    &.fc-today-button {
+      @apply capitalize font-bold w-24;
+    }
+  }
+
+  .fc-button-primary{
+    @apply rounded-xl; 
+  }
+
+  .fc-button-primary:hover {
+    @apply active:bg-primary/10;
   }
 
   .fc-button-primary:not(:disabled).fc-button-active {
@@ -86,5 +101,9 @@
 
   .fc-button-primary:disabled {
     @apply bg-primary/80;
+  }
+
+  .fc-highlight{
+    @apply bg-primary/10;
   }
 }
