--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,17 @@
     border-color: transparent;
     outline: none;
   }
+
+  .tab:is(input:checked) {
+    color: white;
+    font-weight: 700;
+    border-color: oklch(var(--p));
+    border-bottom-width: 4px;
+  }
+
+  .tabs-bordered > .tab {
+    border-color: transparent;
+  }
 }
 
 /* Calendar */
@@ -118,7 +129,6 @@
   .fc-h-event {
     @apply bg-primary border-none px-1 my-[2px];
   }
-
 
   .fc-event {
     @apply cursor-pointer;
